# forskscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  package.json  styles.css  vite.config.js
.github/: SECURITY.md
.github/workflows/: ci.yml  release-executable.yaml  release.yml
.packaging/arch/: PKGBUILD
crates/forskscope-core/: Cargo.toml
crates/forskscope-core/src/: cancel.rs  command.rs  conflict_nav.rs  diff_decoration.rs  dir.rs  document.rs  edit_op.rs  encoding.rs  error.rs  external_tool.rs  file_kind.rs  ignore.rs  job.rs  lib.rs  line_map.rs  merge.rs  patch.rs  path.rs  persist.rs  platform.rs  report.rs  session.rs  settings.rs  tests.rs  vcs.rs  watcher.rs  xlsx.rs
crates/forskscope-core/src/command/: registry.rs
crates/forskscope-core/src/diff/: engine.rs  inline.rs  mod.rs  model.rs  options.rs
crates/forskscope-core/src/dir/: batch.rs  copy.rs  digest.rs  index.rs  listing.rs  merge_plan.rs  mod.rs  recursive.rs
crates/forskscope-core/src/error/: app.rs
crates/forskscope-core/src/job/: limits.rs  mod.rs
crates/forskscope-core/src/merge/: log.rs  mod.rs  session.rs  transaction.rs
crates/forskscope-core/src/merge/three_way/: engine.rs  line.rs  mod.rs  session.rs
crates/forskscope-core/src/patch/: build.rs  directory.rs  model.rs  unified.rs
crates/forskscope-core/src/report/: dir.rs  file.rs  mod.rs
crates/forskscope-core/src/save/: mod.rs
crates/forskscope-core/src/session/: tab.rs
crates/forskscope-core/src/settings/: display.rs
crates/forskscope-core/src/tests/: app_error_tests.rs  batch_tests.rs  cancel_tests.rs  command_tests.rs  compare_profile_tests.rs  conflict_nav_tests.rs  diff_decoration_tests.rs  diff_tests.rs  dir_cancel_tests.rs  dir_index_tests.rs  dir_tests.rs  document_tests.rs  edit_op_tests.rs  editability_tests.rs  encoding_tests.rs  error_tests.rs  external_state_tests.rs  external_tool_tests.rs  file_kind_tests.rs  file_size_tests.rs  ignore_tests.rs  job_tests.rs  line_map_tests.rs  merge_plan_tests.rs  merge_tests.rs  patch_tests.rs  path_tests.rs  persist_tests.rs  platform_tests.rs  report_tests.rs  save_tests.rs  session_tests.rs  settings_tests.rs  three_way_tests.rs  transaction_log_tests.rs  vcs_tests.rs  watcher_tests.rs  xlsx_tests.rs
crates/forskscope-core/tests/: diff_corpus.rs  merge_corpus.rs  patch_apply.rs
crates/forskscope-explorer-align/: Cargo.toml
crates/forskscope-explorer-align/src/: align.rs  lib.rs  search_index.rs
crates/forskscope-ui/: Cargo.toml
crates/forskscope-ui-dioxus/: Cargo.toml
crates/forskscope-ui-dioxus/assets/: main.css
crates/forskscope-ui-dioxus/src/: app.rs  i18n.rs  lib.rs  main.rs  state.rs
crates/forskscope-ui-dioxus/src/ui/: deep_compare.rs  diff.rs  dir_pane.rs  explorer.rs  explorer_align.rs  header.rs  hunk.rs  keybindings.rs  mod.rs  modals.rs  search.rs  search_index.rs  settings.rs  statusbar.rs  tabs.rs
crates/forskscope-ui-logic/: Cargo.toml
crates/forskscope-ui-logic/src/: explore.rs  lib.rs  settings.rs
crates/forskscope-ui-logic/src/compare/: command_bar.rs  conflict_nav_view.rs  hunk_decorations.rs  load_guard.rs  mod.rs  palette_view.rs  save_error.rs  scroll_sync.rs  search_index.rs  summary.rs  tab_state.rs
crates/forskscope-ui-logic/src/explore/: align.rs  deep_filter.rs  mod.rs  status.rs
crates/forskscope-ui-logic/src/settings/: settings_view.rs
crates/forskscope-ui-logic/tests/: css_coverage.rs
crates/forskscope-ui/assets/: main.css
crates/forskscope-ui/assets/css/: 00-reset.css  01-tokens.css  02-layout-shell.css  03-components.css  10-view-explorer.css  11-view-diff.css  12-view-directory-report.css  20-overlays.css  30-contract-diff-decorations.css  90-responsive.css
crates/forskscope-ui/src/: app.rs  i18n.rs  lib.rs  main.rs  state.rs  ui.rs
crates/forskscope-ui/src/state/: compare.rs  mod.rs  profile.rs  session.rs  settings.rs  tab.rs  types.rs
crates/forskscope-ui/src/state/session/: tests.rs
crates/forskscope-ui/src/state/tab/: tests.rs
crates/forskscope-ui/src/ui/: bridge.rs  command_bar.rs  component.rs  conflict_nav.rs  deep_compare.rs  deep_filter.rs  diff.rs  diff_actions.rs  dir_pane.rs  explore_status.rs  explorer.rs  header.rs  hunk.rs  keybindings.rs  layout.rs  mod.rs  modals.rs  overlay.rs  save_error.rs  scroll_sync.rs  search.rs  settings.rs  settings_view.rs  statusbar.rs  tabs.rs  view.rs
crates/forskscope-ui/src/ui/bridge/: compare_summary.rs  explorer_align.rs  hunk_decorations.rs  load_guard.rs  palette_view.rs  search_index.rs  tab_state.rs
crates/forskscope-ui/src/ui/component/: notice.rs
crates/forskscope-ui/src/ui/layout/: statusbar.rs
crates/forskscope-ui/src/ui/overlay/: keybindings.rs  modals.rs
crates/forskscope-ui/src/ui/overlay/modals/: about.rs  copy.rs  file.rs  tab.rs
crates/forskscope-ui/src/ui/view/: diff.rs  dir_pane.rs  explorer.rs  hunk.rs  search.rs  settings.rs
crates/forskscope-ui/src/ui/view/diff/: toolbar.rs
crates/forskscope-ui/src/ui/view/explorer/: compact.rs  filter.rs  footer.rs  tree.rs
crates/forskscope-ui/src/ui/view/settings/: modal.rs  profile.rs
docs/: README.md
docs/src/: SUMMARY.md  introduction.md
packaging/: README.md  build-release.sh
packaging/linux/: PKGBUILD  forskscope.desktop  install.sh
packaging/macos/: build-dmg.sh
packaging/windows/: AppxManifest.xml  build-zip.sh
rfcs/: README.md
rfcs/archive/: 018-migration-compatibility-parity-plan.md
rfcs/done/: 001-core-extraction-and-domain-model.md  002-similar-v3-diff-engine.md  003-dioxus-application-shell.md  005-explorer-workspace.md  006-diff-merge-workspace.md  (+42 more)
src/: app.html  app.rs  consts.ts  main.rs  scripts.ts  stores.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/core/: diff.rs  file.rs  handlers.rs  mod.rs  str.rs  types.rs
src-tauri/src/diff/: mod.rs
src-tauri/translations/: ja.json
static/: styles.css
xtask/: Cargo.toml
(+270 files in other folders)
