[workspace]
resolver = "3"
members = ["crates/forskscope-core", "crates/forskscope-ui-dioxus"]

[workspace.package]
version = "0.28.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
repository = "https://github.com/forskscope/forskscope"

[workspace.dependencies]
forskscope-core = { path = "crates/forskscope-core", version = "0.28.0" }
similar = "3.1"
encoding_rs = "0.8"
chardetng = "0.1"
chrono = "0.4"
sheets-diff = "1.1"
serde = { version = "1", features = ["derive"] }
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-swdir-tree = "0.7"
app-json-settings = "2"

[profile.release]
lto = true
strip = true
