[workspace]
resolver = "3"
members = [
    "crates/forskscope-core",
    "crates/forskscope-ui",
    "crates/forskscope-ui-logic",
]

[workspace.package]
version = "0.160.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
repository = "https://github.com/forskscope/forskscope"

[workspace.dependencies]
forskscope-core     = { version = "0.160.0", path = "crates/forskscope-core" }
forskscope-ui-logic = { version = "0.160.0", path = "crates/forskscope-ui-logic" }

dioxus = { version = "0.7", features = ["desktop"] }
dioxus-core = "0.7"
dioxus-swdir-tree = "0.7"

app-json-settings = "2"
chardetng = "0.1"
dirs-next    = "2"
encoding_rs = "0.8"
rfd = { version = "0.17", default-features = true }
sheets-diff = "2"
similar = "3.1"

chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
lto = true
strip = true
