[package]
name = "patch-hygge"
version = "0.1.0"
description = "Diff and merge GUI tool with cross-platform support build with Tauri: Rust and Svelte"
authors = ["nabbisen <nabbisen@scqr.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "^2.5", features = ["serde"] }
