[package]
name = "patch-hygge"
version = "0.6.5"
edition = "2021"

description = "Diff and merge GUI tool with cross-platform support build with Tauri: Rust and Svelte"
authors = ["nabbisen <nabbisen@scqr.net>"]
license-file = "../LICENSE"

categories = ["gui", "visualization", "development-tools", "text-processing"]
keywords = ["gui", "compare", "diff", "merge", "tool"]
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "patch_hygge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]         # to improve productivity
strip = "debuginfo"   # reduce size
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "^2.7", features = ["serde"] }
tauri-plugin-dialog = "2"
chardetng = "^0.1"
encoding_rs = "^0.8"
