[package]
name = "forskscope-core"
description = "GUI-independent core for ForskScope: file loading, encoding, diff, merge, save safety, and directory comparison."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
similar = { workspace = true }
encoding_rs = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true }
sheets-diff = { workspace = true }

[dev-dependencies]
tempfile = "3"
zip = "7"
