[package]
name        = "forskscope-core"
description = "GUI-independent core for ForskScope: file loading, encoding, diff, merge, save safety, and directory comparison."
readme      = "../../README.md"

version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
encoding_rs                 = { workspace = true }
chardetng                   = { workspace = true }
chrono                      = { workspace = true }
sheets-diff                 = { workspace = true }
similar                     = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
zip                         = { workspace = true }
