[package]
name = "forskscope-explorer-align"
description = "Pure aligned-row merging logic for the ForskScope Explorer pane (no GUI dependency)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
