[package]
name = "forskscope-ui-logic"
description = "Framework-independent presentation logic for ForskScope (view-model layer; no GUI dependency, fully testable without a display server)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
