[package]
name = "forskscope-ui"
description = "ForskScope desktop UI: app shell, explorer, compare/diff-merge workspace, settings, dialogs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "forskscope"
path = "src/main.rs"

[lib]
name = "forskscope_ui"
path = "src/lib.rs"

[dependencies]
forskscope-core = { workspace = true }
forskscope-ui-logic = { workspace = true }
dioxus = { workspace = true }
dioxus-swdir-tree = { workspace = true }
rfd = { workspace = true }
dirs-next    = { workspace = true }
tokio = { workspace = true }
app-json-settings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

